# rust-scoreboard

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  configuring-scoreboard.md  install.sh  scoreboard_settings.json
.cargo/: config
.github/workflows/: main.yml
assets/: closed_square.pix  open_square.pix  phone_frame.pix  small_arrow.pix
assets/demo/: demo_scores.json  scoreboard_settings.json
common/: Cargo.toml
common/src/: lib.rs
diy/: ScoreboardSetup.md
fake_server/: fake_server.py
fonts/: 4x6.bdf  5x8.bdf
game/: Cargo.toml
game/src/: lib.rs
hockey/: Cargo.toml
hockey/src/: lib.rs
matrix/: Cargo.toml
matrix/src/: lib.rs
scoreboard/: Cargo.toml
scoreboard/src/: main.rs
server/: all.py  all_sports.py  baseball.py  baseball_v2.py  basketball.py  college_basketball.py  college_football.py  college_football_v2.py  color.py  common.py  crawler.py  fetcher.py  football.py  football_v2.py  function.py  golf.py  golf_tester.py  hockey.py  lambda.py  ncaa.py  requirements.txt  server.py  team_generator.py
server/api_cache/: baseball.json  espn_baseball.json  espn_football.json  golf-pregame.json  hockey-blues-powerplay.json  hockey.json
server/chardet-4.0.0.dist-info/: RECORD
server/inflect-5.0.2.dist-info/: RECORD
server/saved-games/: baseball.json  baseball_v2.json  basketball.json  college-basketball.json  college-football.json  college_football2.json  football.json  golf.json  golf2.json  golf3.json  hockey.json  hockey_api.json  hockey_powerplay.json
server/teams/: baseball.json  college-basketball-groups-raw.json  college-basketball-raw.json  college_basketball_processed.json  college_basketball_raw.json  pro-basketball.json  pro-football.json
src/: animation.rs  animation_test.rs  aws_screen.rs  baseball.rs  basketball.rs  button.rs  clock.rs  college_basketball.rs  common.rs  custom_message.rs  demo.rs  flappy.rs  football.rs  game.rs  golf.rs  hockey.rs  lib.rs  main.rs  matrix.rs  message.rs  patch_notes.rs  rocket.toml  scheduler.rs  scoreboard_settings.rs  setup_screen.rs  shell_executor.rs  sport.rs  updater.rs  webserver.rs
