[package]
name = "scoreboard-rust"
version = "0.1.0"
authors = ["Mark Schmidt <mark.schmidt@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpi-led-matrix = "0.2.1"
chrono = "0.4.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
ureq = { version = "1.3.0", features = ["json"]}
