[package]
name = "scoreboard-rust"
version = "0.1.0"
authors = ["Mark Schmidt <mark.schmidt@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpi-led-matrix = "0.2.1"
chrono = "0.4.13"
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"]}
ureq = { version = "1.3.0", features = ["json"]}
rocket = "0.4.5"
rocket_contrib = "0.4.5"
chrono-tz = "0.5"
rust-embed={version="5.6.0", features = ["debug-embed"]}
log = "0.4.0"
flexi_logger = {version="0.16.1", features=["colors"]}
png = "0.16.7"