[package]
name = "scoreboard"
version = "2.3.0"
authors = ["Mark Schmidt <mark.schmidt@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpi-led-matrix = "0.2.2"
chrono = "0.4.13"
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive", "rc"]}
ureq = { version = "1.3.0", features = ["json", "charset"]}
rocket = "0.4.5"
rocket_contrib = "0.4.5"
chrono-tz = "0.5"
rust-embed={version="5.6.0", features = ["debug-embed"]}
log = "0.4.0"
flexi_logger = {version="0.16.1", features=["colors"]}
png = "0.16.7"
rand = "0.7.3"
rand_distr = "0.3.0"
sysfs_gpio = "0.5.4"
users = "0.11.0"
openssl = { version = "0.10", features = ["vendored"] }
ring = "0.16.17"
self_update = "0.20.0"
clap = "2.33.3"
itertools = "0.9.0"
system_shutdown = "3.0.0"
