[package]
name = "hockey"
version = "0.1.0"
authors = ["Mark Schmidt <schmidtwmark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = {path="../common"}
matrix = {path= "../matrix"}
game = {path="../game"}
rpi-led-matrix = {path = "../rust-rpi-rgb-led-matrix"}
chrono = "0.4.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}