[package]
name = "scoreboard-rust"
version = "0.1.0"
authors = ["Mark Schmidt <mark.schmidt@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpi-led-matrix = {path = "../rust-rpi-rgb-led-matrix" }
common = {path= "../common"}
matrix = {path= "../matrix"}
hockey = {path= "../hockey"} 
game = {path= "../game"}